--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,25 +4,31 @@
       package="com.example.wizard1"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="8"  />
+    <uses-sdk android:minSdkVersion="8"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <application android:allowBackup="true"
-        	android:icon="@drawable/ic_launcher"
+        	     android:icon="@drawable/ic_launcher"
         		 android:label="@string/app_name" >
-        <activity android:name=".WizardFight"
-            	  android:screenOrientation="portrait"
-                  android:label="@string/app_name"
-                  android:configChanges="orientation|keyboardHidden">
+        <activity android:name=".MainMenu"
+                  android:screenOrientation="portrait"
+                  android:configChanges="orientation|keyboardHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".WizardFight"
+            	  android:screenOrientation="portrait"
+                  android:label="@string/app_name"
+                  android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".DeviceListActivity"
                   android:screenOrientation="portrait"
                   android:label="@string/select_device"
                   android:theme="@android:style/Theme.Dialog"
+                  android:configChanges="orientation|keyboardHidden" />
+        <activity android:name=".Spellbook"
+            	  android:screenOrientation="portrait"
                   android:configChanges="orientation|keyboardHidden" />
     </application>
 </manifest>
