--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,9 @@
             	  android:screenOrientation="portrait"
                   android:label="@string/app_name"
                   android:configChanges="orientation|keyboardHidden" />
+        <activity android:name=".Countdown"
+            	  android:label=""
+                  android:theme="@style/CountdownDialog"/>
         <activity android:name=".DeviceListActivity"
                   android:screenOrientation="portrait"
                   android:label="@string/select_device"
