--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,12 +22,18 @@
             	  android:screenOrientation="portrait"
                   android:label="@string/app_name"
                   android:configChanges="orientation|keyboardHidden" />
+        <activity android:name=".ClientWaitingActivity"
+             	  android:screenOrientation="portrait"
+             	  android:noHistory="true"
+                  android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".Countdown"
+             	  android:screenOrientation="portrait"
             	  android:label=""
                   android:theme="@style/CountdownDialog"/>
         <activity android:name=".DeviceListActivity"
                   android:screenOrientation="portrait"
                   android:label="@string/select_device"
+                  android:noHistory="true"
                   android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".Spellbook"
             	  android:screenOrientation="portrait"
