--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".WizardFight"
             	  android:screenOrientation="portrait"
                   android:label="@string/app_name"
+                  android:launchMode="singleTop"
                   android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".ClientWaitingActivity"
             	  android:label="@string/client_waiting"
