--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,29 +19,22 @@
             </intent-filter>
         </activity>
         <activity android:name=".WizardFight"
+            	  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             	  android:screenOrientation="portrait"
                   android:label="@string/app_name"
                   android:launchMode="singleTop"
                   android:configChanges="orientation|keyboardHidden" />
-        <activity android:name=".ClientWaitingActivity"
-            	  android:label="@string/client_waiting"
-            	  android:theme="@style/ClientWaitingDialog"
-             	  android:screenOrientation="portrait"
-             	  android:noHistory="true"
-                  android:configChanges="orientation|keyboardHidden" />
-        <activity android:name=".Countdown"
-             	  android:screenOrientation="portrait"
-            	  android:label=""
-                  android:theme="@style/CountdownDialog"/>
         <activity android:name=".DeviceListActivity"
                   android:screenOrientation="portrait"
                   android:label="@string/select_device"
                   android:noHistory="true"
                   android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".Tutorial"
+            	  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             	  android:screenOrientation="portrait"
                   android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".Spellbook"
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             	  android:screenOrientation="portrait"
                   android:configChanges="orientation|keyboardHidden" />
     </application>
