--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-sdk android:minSdkVersion="8"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    
     <application android:allowBackup="true"
         	     android:icon="@drawable/ic_launcher"
         		 android:label="@string/app_name" >
@@ -44,5 +48,8 @@
         <activity android:name=".Spellbook"
             	  android:screenOrientation="portrait"
                   android:configChanges="orientation|keyboardHidden" />
+        <activity android:name=".DesktopConnection"
+            	  android:screenOrientation="portrait"
+                  android:configChanges="orientation" />
     </application>
 </manifest>
