--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".WizardPreferences"
+                  android:screenOrientation="portrait"
+                  android:configChanges="orientation|keyboardHidden" >
+        </activity>
         <activity android:name=".WizardFight"
             	  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             	  android:screenOrientation="portrait"
