--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,7 +26,19 @@
                   android:screenOrientation="portrait"
                   android:configChanges="orientation|keyboardHidden" >
         </activity>
-        <activity android:name=".WizardFight"
+        <activity android:name=".FightActivity"
+            	  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            	  android:screenOrientation="portrait"
+                  android:label="@string/app_name"
+                  android:launchMode="singleTop"
+                  android:configChanges="orientation|keyboardHidden" />
+        <activity android:name=".BtFightActivity"
+            	  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            	  android:screenOrientation="portrait"
+                  android:label="@string/app_name"
+                  android:launchMode="singleTop"
+                  android:configChanges="orientation|keyboardHidden" />
+        <activity android:name=".TestFightActivity"
             	  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             	  android:screenOrientation="portrait"
                   android:label="@string/app_name"
