--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,12 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     
     <application android:allowBackup="true"
@@ -54,6 +59,12 @@
         <activity android:name=".DesktopConnection"
             	  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             	  android:screenOrientation="portrait"
-                  android:configChanges="orientation" />
+                  android:configChanges="orientation">
+                  <intent-filter>
+                      <action android:name="android.intent.action.MAIN" />
+                      <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+                      <category android:name="android.intent.category.LAUNCHER" />
+                  </intent-filter>/>
+		</activity>
     </application>
 </manifest>
