--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,6 +44,7 @@
                   android:launchMode="singleTop"
                   android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".DeviceListActivity"
+            	  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
                   android:screenOrientation="portrait"
                   android:label="@string/select_device"
                   android:noHistory="true"
