--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,9 +2,9 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.wizardfight"
-      android:versionCode="2"
-      android:versionName="1.02">
-    <uses-sdk android:minSdkVersion="8"/>
+      android:versionCode="3"
+      android:versionName="1.03">
+    <uses-sdk android:minSdkVersion="9"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -19,6 +19,10 @@
     <application android:allowBackup="true"
         	     android:icon="@drawable/ic_launcher"
         		 android:label="@string/app_name" >
+        <meta-data android:name="com.google.android.gms.games.APP_ID"
+                   android:value="@string/app_id" />
+        <meta-data android:name="com.google.android.gms.version"
+                   android:value="@integer/google_play_services_version"/>
         <activity android:name=".MainMenu"
                   android:screenOrientation="portrait"
                   android:configChanges="orientation|keyboardHidden" >
